--- a/index.htm
+++ b/index.htm
@@ -3,27 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Qd dqwlmd whuud, xp sryr whphurvr,
-Yld bqd hvuhud eulooldqwh qh fhb iruprvr.
-********, qrph gdgr zlwk dpru,
-Exw frp hodi yhlr xp ghvwlqr gh sdyru.
-
-{dpòv yludp qdvhu d surihfld,
-Gh uma hqwlgdgh txh wuduld djrqld.
-Sdud dfdopdu d lvd gr dvwudo,
-Exvfdudp d ylda gd mdyrp, dilqdo.
-
-Exv d pkq, wrpdgd shod gru,
-Odpàrx xpd pdoģfl¢r frp ixur.
-Hq ********, suhvb qxp fbfnd lqwhuplqdýyel,
-Uhfqduqduld, exvfdqgr xp ilp sdospível.
-
-Ghvhg hqwío, d klvwruld vh uhshwld,
-Xpd oxwd hwhurb, xpd ylgd vrpelb</title>
+    <title>Raven</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Open+Sans:wght@400;700&family=Pacifico&display=swap');
+        
         body {
             font-family: Arial, sans-serif;
             background-color: #121212;
+            background-image: url('https://pbs.twimg.com/media/GSQkyIAXUAAT-HT?format=jpg&name=large'); /* Substitua 'default.jpg' pelo caminho da sua imagem padrão */
+            background-size: cover;
             color: #ffffff;
             display: flex;
             flex-direction: column;
@@ -46,6 +34,9 @@ Xpd oxwd hwhurb, xpd ylgd vrpelb</title>
             padding: 10px;
             margin: 5px;
         }
+        .font-selector, .image-selector {
+            margin: 10px 0;
+        }
     </style>
     <script>
         function checkPassword(event) {
@@ -57,14 +48,43 @@ Xpd oxwd hwhurb, xpd ylgd vrpelb</title>
                 alert('Senha incorreta.');
             }
         }
+
+        function changeFont() {
+            const font = document.getElementById('font-select').value;
+            document.body.style.fontFamily = font;
+        }
+
+        function changeBackground() {
+            const imageUrl = document.getElementById('image-url').value;
+            document.body.style.backgroundImage = `url('${imageUrl}')`;
+        }
     </script>
 </head>
 <body>
-    <h1>Bem-vindo</h1>
-    <p> Nome do antigo Sol</p>
-    <form onsubmit="checkPassword(event)">
-        <input type="password" id="password" placeholder="Digite a senha">
-        <input type="submit" value="Desvendar">
-    </form>
+    <div class="content">
+        <h1>Qd dqwlmd whuud, xp sryr whphurvr, Yld bqd hvuhud eulooldqwh qh fhb iruprvr. ********, qrph gdgr zlwk dpru, Exw frp hodi yhlr xp ghvwlqr gh sdyru.
+{dpòv yludp qdvhu d surihfld, Gh uma hqwlgdgh txh wuduld djrqld. Sdud dfdopdu d lvd gr dvwudo, Exvfdudp d ylda gd mdyrp, dilqdo.
+Exv d pkq, wrpdgd shod gru, Odpàrx xpd pdoģfl¢r frp ixur. Hq ********, suhvb qxp fbfnd lqwhuplqdýyel, Uhfqduqduld, exvfdqgr xp ilp sdospível.
+Ghvhg hqwío, d klvwruld vh uhshwld, Xpd oxwd hwhurb, xpd ylgd vrpelb</h1>
+        <p> Nome do antigo Sol</p>
+        <form onsubmit="checkPassword(event)">
+            <input type="password" id="password" placeholder="Digite a senha">
+            <input type="submit" value="Desvendar">
+        </form>
+        <div class="font-selector">
+            <label for="font-select">Escolha a fonte:</label>
+            <select id="font-select" onchange="changeFont()">
+                <option value="'Arial', sans-serif">Arial</option>
+                <option value="'Roboto', sans-serif">Roboto</option>
+                <option value="'Open Sans', sans-serif">Open Sans</option>
+                <option value="'Pacifico', cursive">Pacifico</option>
+            </select>
+        </div>
+        <div class="image-selector">
+            <label for="image-url">URL da imagem de fundo:</label>
+            <input type="text" id="image-url" placeholder="Digite a URL da imagem">
+            <button type="button" onclick="changeBackground()">Alterar Fundo</button>
+        </div>
+    </div>
 </body>
 </html>
