--- a/index.htm
+++ b/index.htm
@@ -45,22 +45,22 @@
     </script>
 </head>
 <body>
-    <h1>Qd dqwlmd whuud, xp sryr whphurvr,
-Yld bqd hvuhud eulooldqwh qh fhb iruprvr.
-********, qrph gdgr zlwk dpru,
-Exw frp hodi yhlr xp ghvwlqr gh sdyru.
+    <h1>Qd dqwlmd whuud, xp sryr whphurvr,<br>
+Yld bqd hvuhud eulooldqwh qh fhb iruprvr.<br>
+********, qrph gdgr zlwk dpru,<br>
+Exw frp hodi yhlr xp ghvwlqr gh sdyru.<br>
 
-{dpòv yludp qdvhu d surihfld,
-Gh uma hqwlgdgh txh wuduld djrqld.
-Sdud dfdopdu d lvd gr dvwudo,
-Exvfdudp d ylda gd mdyrp, dilqdo.
+{dpòv yludp qdvhu d surihfld,<br>
+Gh uma hqwlgdgh txh wuduld djrqld.<br>
+Sdud dfdopdu d lvd gr dvwudo,<br>
+Exvfdudp d ylda gd mdyrp, dilqdo.<br>
 
-Exv d pkq, wrpdgd shod gru,
-Odpàrx xpd pdoģfl¢r frp ixur.
-Hq ********, suhvb qxp fbfnd lqwhuplqdýyel,
-Uhfqduqduld, exvfdqgr xp ilp sdospível.
+Exv d pkq, wrpdgd shod gru,<br>
+Odpàrx xpd pdoģfl¢r frp ixur.<br>
+Hq ********, suhvb qxp fbfnd lqwhuplqdýyel,<br>
+Uhfqduqduld, exvfdqgr xp ilp sdospível.<br>
 
-Ghvhg hqwío, d klvwruld vh uhshwld,
+Ghvhg hqwío, d klvwruld vh uhshwld,<br>
 Xpd oxwd hwhurb, xpd ylgd vrpelb</h1>
     <p> Nome do antigo Sol</p>
     <form onsubmit="checkPassword(event)">
