--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Raven</title>
+    <title>Nome do Antigo sol</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -62,7 +62,6 @@ Uhfqduqduld, exvfdqgr xp ilp sdospível.<br>
 
 Ghvhg hqwío, d klvwruld vh uhshwld,<br>
 Xpd oxwd hwhurb, xpd ylgd vrpelb</h1>
-    <p> Nome do antigo Sol</p>
     <form onsubmit="checkPassword(event)">
         <input type="password" id="password" placeholder="Digite a senha">
         <input type="submit" value="Desvendar">
