--- a/index.htm
+++ b/index.htm
@@ -7,9 +7,8 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #121212;
-            background-image: url('https://pbs.twimg.com/media/GSQkyIAXUAAT-HT?format=jpg&name=large');
-            color: #ffffff;
+            background-color: #000000;
+            color: #000000;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -18,13 +17,8 @@
             margin: 0;
         }
         h1 {
-            font-size: 2em;
+            font-size: 1em;
             margin-bottom: 20px;
-        }
-        p {
-            font-size: 1.2em;
-            margin-bottom: 20px;
-            text-align: center;
         }
         input[type="password"], input[type="submit"] {
             font-size: 1em;
@@ -46,22 +40,22 @@
 </head>
 <body>
     <h1>Qd dqwlmd whuud, xp sryr whphurvr,<br>
-Yld bqd hvuhud eulooldqwh qh fhb iruprvr.<br>
-********, qrph gdgr zlwk dpru,<br>
-Exw frp hodi yhlr xp ghvwlqr gh sdyru.<br>
-
-{dpòv yludp qdvhu d surihfld,<br>
-Gh uma hqwlgdgh txh wuduld djrqld.<br>
-Sdud dfdopdu d lvd gr dvwudo,<br>
-Exvfdudp d ylda gd mdyrp, dilqdo.<br>
-
-Exv d pkq, wrpdgd shod gru,<br>
-Odpàrx xpd pdoģfl¢r frp ixur.<br>
+    Yld bqd hvuhud eulooldqwh qh fhb iruprvr.<br>
+    ********, qrph gdgr zlwk dpru,<br>
+    Exw frp hodi yhlr xp ghvwlqr gh sdyru.<br>
+<br>
+    {dpòv yludp qdvhu d surihfld,<br>
+    Gh uma hqwlgdgh txh wuduld djrqld.<br>
+    Sdud dfdopdu d lvd gr dvwudo,<br>
+    Exvfdudp d ylda gd mdyrp, dilqdo.<br>
+<br>
+        Exv d pkq, wrpdgd shod gru,<br>
+       Odpàrx xpd pdoģfl¢r frp ixur.<br>
 Hq ********, suhvb qxp fbfnd lqwhuplqdýyel,<br>
-Uhfqduqduld, exvfdqgr xp ilp sdospível.<br>
-
-Ghvhg hqwío, d klvwruld vh uhshwld,<br>
-Xpd oxwd hwhurb, xpd ylgd vrpelb</h1>
+  Uhfqduqduld, exvfdqgr xp ilp sdospível.<br>
+<br>
+    Ghvhg hqwío, d klvwruld vh uhshwld,<br>
+  Xpd oxwd hwhurb, xpd ylgd vrpelb</h1>
     <form onsubmit="checkPassword(event)">
         <input type="password" id="password" placeholder="Digite a senha">
         <input type="submit" value="Desvendar">
