--- a/index.htm
+++ b/index.htm
@@ -57,8 +57,8 @@ Hq ********, suhvb qxp fbfnd lqwhuplqdýyel,<br>
     Ghvhg hqwío, d klvwruld vh uhshwld,<br>
   Xpd oxwd hwhurb, xpd ylgd vrpelb</h1>
     <form onsubmit="checkPassword(event)">
-        <input type="password" id="password" placeholder="Digite a senha">
-        <input type="submit" value="Desvendar">
+        <input type="password" id="password" placeholder="...">
+        <input type="submit" value=">">
     </form>
 </body>
 </html>
