--- a/next_clue.html
+++ b/next_clue.html
@@ -12,7 +12,7 @@
             overflow: hidden;
         }
         .background-image {
-            background-image: url('resposta.jpg'); /* Substitua pelo caminho da sua imagem */
+            background-image: url('https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSsl9HrLBt2-yqRu-MllG18_XiyLxm5gnIW6p2O836r0AQ7cAas'); /* Substitua pelo caminho da sua imagem */
             background-size: cover;
             background-position: center;
             width: 100%;
