--- a/next_clue.html
+++ b/next_clue.html
@@ -12,8 +12,8 @@
             overflow: hidden;
         }
         .background-image {
-            background-image: url('https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSsl9HrLBt2-yqRu-MllG18_XiyLxm5gnIW6p2O836r0AQ7cAas'); /* Substitua pelo caminho da sua imagem */
-            background-size: auto;
+            background-image: url('https://steamuserimages-a.akamaihd.net/ugc/2455103368276657197/793E06FD2207C81D53D7D99C01EDC74DA12F0A0C/?imw=512&&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false'); /* Substitua pelo caminho da sua imagem */
+            background-size: 512px 512px;
             background-position: center;
             width: 100%;
             height: 100%;
