--- a/next_clue.html
+++ b/next_clue.html
@@ -14,6 +14,7 @@
         .background-image {
             background-image: url('https://steamuserimages-a.akamaihd.net/ugc/2455103368276657197/793E06FD2207C81D53D7D99C01EDC74DA12F0A0C/?imw=512&&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false'); /* Substitua pelo caminho da sua imagem */
             background-size: 512px 512px;
+            background-repeat: no-repeat
             background-position: center;
             width: 100%;
             height: 100%;
