--- a/next_clue.html
+++ b/next_clue.html
@@ -12,7 +12,7 @@
             overflow: hidden;
         }
         .background-image {
-             background-color: #000000;
+           
             background-image: url('https://steamuserimages-a.akamaihd.net/ugc/2455103368276657197/793E06FD2207C81D53D7D99C01EDC74DA12F0A0C/?imw=512&&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false'); /* Substitua pelo caminho da sua imagem */
             background-size: contain;
             background-repeat: no-repeat;
@@ -20,6 +20,7 @@
             width: 100%;
             height: 100%;
         }
+{background-color: #000000;}
     </style>
 </head>
 <body>
