--- a/next_clue.html
+++ b/next_clue.html
@@ -18,10 +18,16 @@
             width: 100%;
             height: 100%;
         }
-
+         .foreground-image {
+            position: Center;
+            width: 80%; /* Ajuste o tamanho conforme necessário */
+            height: auto; /* Ajuste conforme necessário */
+            z-index: 2; /* Garante que a imagem superior está acima da imagem de fundo */
+        }
     </style>
 </head>
 <body>
     <div class="background-image"></div>
+    <img src="https://steamuserimages-a.akamaihd.net/ugc/2455103368276657197/793E06FD2207C81D53D7D99C01EDC74DA12F0A0C/?imw=512&&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false" alt="Imagem Superior" class="foreground-image"> <!-- Caminho para a imagem superior -->
 </body>
 </html>
