--- a/next_clue.html
+++ b/next_clue.html
@@ -17,6 +17,7 @@
             background-position: center;
             width: 100%;
             height: 100%;
+            z-index: 1;
         }
          .foreground-image {
             position: Center;
