--- a/next_clue.html
+++ b/next_clue.html
@@ -29,8 +29,8 @@
             position: absolute;
             top: 10%; /* Ajuste a posição conforme necessário */
             left: 10%; /* Ajuste a posição conforme necessário */
-            width: 80%; /* Ajuste o tamanho conforme necessário */
-            height: auto; /* Ajuste conforme necessário */
+            width: 512px; /* Ajuste o tamanho conforme necessário */
+            height: 512px; /* Ajuste conforme necessário */
             z-index: 2; /* Garante que a imagem superior está acima da imagem de fundo */
         }
     </style>
