--- a/next_clue.html
+++ b/next_clue.html
@@ -26,9 +26,7 @@
         }
 
         .foreground-image {
-            position: absolute;
-            top: 50%; /* Ajuste a posição conforme necessário */
-            left: 50%; /* Ajuste a posição conforme necessário */
+            position: center;
             width: 512px; /* Ajuste o tamanho conforme necessário */
             height: 512px; /* Ajuste conforme necessário */
             z-index: 2; /* Garante que a imagem superior está acima da imagem de fundo */
