--- a/next_clue.html
+++ b/next_clue.html
@@ -40,6 +40,6 @@
 </head>
 <body>
     <div class="background-image"></div>
-    <img src="downloadsteg.jpeg" alt="Imagem Superior" class="foreground-image"> <!-- Caminho para a imagem superior -->
+    <img src="downloadsteg.jpg" alt="Imagem Superior" class="foreground-image"> <!-- Caminho para a imagem superior -->
 </body>
 </html>
